Fix bug applying text formatting with open IME composition

In https://goo.gl/Hhd2ah, we changed a piece of code in
InputMethodController::SelectComposition() from:

GetFrame().Selection().SetSelection(
    SelectionInDOMTree::Builder().SetBaseAndExtent(range).Build(), 0);

to

GetFrame().Selection().SetSelection(
    SelectionInDOMTree::Builder().SetBaseAndExtent(range).Build());

This is not correct, because calling FrameSelection::SetSelection() with no
options param is not the same as calling it with no options:

void FrameSelection::SetSelection(const SelectionInDOMTree& selection) {
  SetSelection(selection, SetSelectionOptions::Builder()
                              .SetShouldCloseTyping(true)
                              .SetShouldClearTypingStyle(true)
                              .Build());
}

The fix is to pass a SetSelectionOptions builder and explicitly call
SetShouldClearTypingStyle(false) (I am not sure if adding the
SetShouldCloseTyping() option changed the behavior at all).

Bug: 801388
Change-Id: I84ae2f0a19839da2b9d42cd589325c3ee098ae00